Añadir estilos de Bootstrap

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -5,6 +5,8 @@ $body-bg: #f8fafc;
 $font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
+// Habilitar fuentes responsive en Bootstrap
+$enable-responsive-font-sizes: true;
 
 // Colors
 $blue: #3490dc;
@@ -17,3 +19,6 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+// Sobre-escribir colores de bootstrap
+$primary: #38b2ac;
